--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,15 @@
         ],
         "no-import-assign": [
             "error"
+        ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "vars": "all",
+                "args": "after-used",
+                "ignoreRestSiblings": false
+            }
         ]
     }
 }
