--- a/package.json
+++ b/package.json
@@ -16,21 +16,24 @@
         "types-check:watch": "tsc --watch"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^2.13.0",
+        "@typescript-eslint/parser": "^2.13.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "eslint": "^6.8.0",
+        "gsap": "^3.0.4",
+        "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "nodemon": "^2.0.2",
+        "pixi.js": "^5.2.0",
+        "prettier": "^1.19.1",
+        "reflect-metadata": "^0.1.13",
+        "rimraf": "^3.0.0",
+        "ts-loader": "^6.2.1",
+        "css-loader": "^3.4.2",
+        "tslib": "^1.10.0",
+        "typescript": "^3.7.4",
         "webpack": "^4.41.4",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1",
-        "eslint": "^6.8.0",
-        "html-webpack-plugin": "^3.2.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "nodemon": "^2.0.2",
-        "rimraf": "^3.0.0",
-        "typescript": "^3.7.4",
-        "ts-loader": "^6.2.1",
-        "tslib": "^1.10.0",
-        "reflect-metadata": "^0.1.13",
-        "pixi.js": "^5.2.0",
-        "gsap": "^3.0.4",
-        "@typescript-eslint/eslint-plugin": "^2.13.0",
-        "@typescript-eslint/parser": "^2.13.0"
+        "webpack-dev-server": "^3.10.1"
     }
 }
