[ADD] Hot module replacement; [ADD] Server.js [ADD] Types for node and webpack-env

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,7 @@
         "browser": true,
         "es6": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/eslint-recommended"
-    ],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended"],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -16,30 +13,15 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    "plugins": ["@typescript-eslint"],
     "rules": {
         "strict": 2,
-        "indent": [
-            "error",
-            4
-        ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "no-import-assign": [
-            "error"
-        ],
+        "indent": ["error", 4],
+        "linebreak-style": ["error", "windows"],
+        "quotes": ["error", "single"],
+        "semi": ["error", "always"],
+        "no-import-assign": ["error"],
+        "lines-between-class-members": ["error", "always"],
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": [
             "error",
