--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "author": "",
     "license": "ISC",
     "scripts": {
-        "build-watch": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --hot --mode development\"",
+        "build-watch": "node server.dev.js",
         "build-dev": "webpack --mode development",
         "build-prod": "webpack --mode production",
         "clean-build": "rimraf dist",
@@ -16,10 +16,14 @@
         "types-check:watch": "tsc --watch"
     },
     "devDependencies": {
+        "@types/node": "^13.13.4",
+        "@types/webpack-env": "^1.15.2",
         "@typescript-eslint/eslint-plugin": "^2.13.0",
         "@typescript-eslint/parser": "^2.13.0",
         "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.4.2",
         "eslint": "^6.8.0",
+        "express": "^4.17.1",
         "gsap": "^3.0.4",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.9.0",
@@ -29,11 +33,12 @@
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.0",
         "ts-loader": "^6.2.1",
-        "css-loader": "^3.4.2",
         "tslib": "^1.10.0",
         "typescript": "^3.7.4",
         "webpack": "^4.41.4",
         "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1"
+        "webpack-dev-middleware": "^3.7.2",
+        "webpack-dev-server": "^3.10.1",
+        "webpack-hot-middleware": "^2.25.0"
     }
 }
